fixes to DetailedSources, associated objects of parameters, varargs